# Practica1Edd

./: CMakeLists.txt  main.cpp
bases/: Carta.cpp  Carta.h  ColasPrincipales.cpp  ColasPrincipales.h  Juego.cpp  Juego.h  ListaDoble.cpp  ListaDoble.h  Nodo.cpp  Nodo.h  Pila.cpp  Pila.h
